# development-phase

./: .gitignore  CMakeLists.txt  Coding Test Staf AI Researcher PT Delameta Bilano.ipynb  Dockerfile  README.md  base64.cpp  build_infer_model.sh  infer_model.cpp  main.cpp
.ipynb_checkpoints/: Coding Test Staf AI Researcher PT Delameta Bilano-checkpoint.ipynb
data/: test_data.pkl  test_dataloader.pkl  train_data.pkl  train_dataloader.pkl
include/: common.h  labels.hpp  wan.hpp
include/wan/: analytics.hpp  http.hpp
models/: best_model.pth  final_model.pth  traced_model.pt
models/v1/: best_model.pth  final_model.pth
models/v2/: best_model.pth  final_model.pth
models/v3/: best_model.pth  final_model.pth
tests/: base64.txt
